--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
+<!doctype html>
 <html>
   <head>
     <title>es6-spa-seed</title>
+    <link rel="stylesheet" href="/dist/css/style.css">
     <script src="/js/jspm_packages/system.js"></script>
     <script src="/js/config.js"></script>
-    <!--<script src="/js/dist/app-built.js"></script>-->
+    <!--<script src="/dist/js/app-built.js"></script>-->
   </head>
   <body>
     <h1>es6-spa-seed</h1>
