--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>es6-spa-seed</h1>
     <script>
-      System.import('src/app').then(function(app){
+      System.import('app/main').then(function(app){
         window.app = app.default();
       });
     </script>
